--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.congit.simplewebbrowser">
+    package="com.congit.ngw">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/laucher"
+        android:icon="@mipmap/ngw"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/laucher"
+        android:roundIcon="@mipmap/ngw"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.SimpleWebBrowser">
